@@ -282,6 +282,33 @@ DBUser=root
 # Default:
 # CacheUpdateFrequency=60
 
+### Option: HistoryCacheSize
+#	Size of history cache, in bytes.
+#	Shared memory size for storing history data.
+#
+# Mandatory: no
+# Range: 131072-1073741824 (128KB-1GB)
+# Default:
+# HistoryCacheSize=8388608
+
+### Option: TrendCacheSize
+#	Size of trend cache, in bytes.
+#	Shared memory size for storing trends data.
+#
+# Mandatory: no
+# Range: 131072-1073741824 (128KB-1GB)
+# Default:
+# TrendCacheSize=4194304
+
+### Option: HistoryTextCacheSize
+#	Size of text history cache, in bytes.
+#	Shared memory size for storing character, text or log history data.
+#
+# Mandatory: no
+# Range: 131072-1073741824 (128KB-1GB)
+# Default:
+# HistoryTextCacheSize=16777216
+
 ### Option: Timeout
 #	Specifies how long we wait for agent, SNMP device or external check (in seconds).
 #
